Sat Dec 19 01:56:13 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkclist.c (gtk_clist_button_press): fixed GDK_2BUTTON_PRESS
 	bug.

Fri Dec 18 15:30:43 PST 1998 Manish Singh <yosh@gimp.org>

	* configure.in: add ja to ALL_LINGUAS

Fri Dec 18 15:19:54 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtksocket.c (gtk_socket_filter_func): Marked
	plug window as destroyed before destroying the 
	window.

Fri Dec 18 14:17:14 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenu.c (gtk_menu_popup): Set the usize on the
	tearoff window so when we reparent the window out,
	the window doesn't shrink down.

1998-12-18  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* configure.in: do not export the glib flags for thread support to
	gtk-config.

Fri Dec 18 01:32:59 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkmain.c (gtk_main): added gdk_flush() after g_main_run(), so we
 	get the original behaviour back, i.e. the event queue needs to be flushed
	after a main loop has been quitted.
	(gtk_main): add/remove the current main loop to/from the main loop
 	before/after init/quit functions have been exected to preserve the
 	original gtk_main_quit() behaviour.

Thu Dec 17 23:48:29 1998  Tim Janik  <timj@gtk.org>

	* gdk/gdkevents.c (gdk_events_init): changed argument order in call
	to g_main_add_poll() to match recent glib changes.

Thu Dec 17 20:33:28 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk-config.in: Add @INTLLIBS@. 
	gtk-scier-981116-0.patch  Sean Cier <scier@PostHorizon.com>) ]

	* gtk/gtkcolorsel.c gtk/gtkfilesel.c gtk/gtkfontsel.c
	  gtk/gtkgamma.c gtk/gtkinputdialog.c 
	  gtk/gtknotebook.c gtk/gtkrc.c gtk/gtkthemes.c
	  gtk/gtktipsquery.c: 
	
	Applied parts of gtk-egger-981215-1 [ Daniel Egger
	<Daniel.Egger@t-online.de> ] marking additional strings for
	internationalization.
	
	* po/nl.po: Added Dutch translation from 
	Paul Siegmann <pauls@euronet.nl>.
	
Thu Dec 17 18:25:52 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c (gtk_drag_drop_finished): Remove the